[package]
name = "lightning"
version = "0.0.118"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning/"
description = """
A Bitcoin Lightning library in Rust.
Does most of the hard work, without implying a specific runtime, requiring clients implement basic network logic, chain interactions and disk storage.
Still missing tons of error-handling. See GitHub issues for suggested projects if you want to contribute. Don't have to bother telling you not to use this for anything serious, because you'd have to build a client around it to even try.
"""
edition = "2018"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Internal test utilities exposed to other repo crates
_test_utils = ["regex", "bitcoin/bitcoinconsensus"]
# Unlog messages superior at targeted level.
max_level_off = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []
# Allow signing of local transactions that may have been revoked or will be revoked, for functional testing (e.g. justice tx handling).
# This is unsafe to use in production because it may result in the counterparty publishing taking our funds.
unsafe_revoked_tx_signing = []
# Override signing to not include randomness when generating signatures for test vectors.
_test_vectors = []

no-std = ["hashbrown", "bitcoin/no-std", "core2/alloc"]
std = ["bitcoin/std"]

# Generates low-r bitcoin signatures, which saves 1 byte in 50% of the cases
grind_signatures = []

default = ["std", "grind_signatures"]

[dependencies]
bitcoin_30 = { package = "bitcoin", version = "0.30.0", default-features = false, features = ["secp-recovery", "base64"] }
bitcoin = { package = "bitcoin", version = "0.29.0", default-features = false, features = ["base64", "secp-recovery", "serde"] }

hashbrown = { version = "0.8", optional = true }
regex = { version = "1.5.6", optional = true }
backtrace = { version = "0.3", optional = true }

core2 = { version = "0.3.0", optional = true, default-features = false }

# RGB and related
amplify = { version = "=4.6.0", default-features = false }
base64 = "0.13.0"
bp-core = { version = "=0.11.0-beta.5", default-features = false }
commit_verify = { version = "=0.11.0-beta.5", default-features = false }
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
rgb-core = { version = "=0.11.0-beta.5", default-features = false, features = [
    "stl",
] }
rgb-invoice = { version = "=0.11.0-beta.5", default-features = false }
rgb-lib = { version = "0.3.0-alpha.2", features = [
    "electrum",
    "esplora",
] }
rgb-psbt = { version = "=0.11.0-beta.5", default-features = false }
rgb-std = { version = "=0.11.0-beta.5", default-features = false }
rgb-runtime = { version = "=0.11.0-beta.5", default-features = false, features = [
    "electrum",
    "serde",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
strict_encoding = { version = "=2.7.0-beta.1", default-features = false }
tokio = { version = "1.14.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
hex = "0.4"
regex = "1.5.6"

[dev-dependencies.bitcoin]
version = "0.29.0"
default-features = false
features = ["bitcoinconsensus", "secp-recovery"]

[target.'cfg(ldk_bench)'.dependencies]
criterion = { version = "0.4", optional = true, default-features = false }

[target.'cfg(taproot)'.dependencies]
musig2 = { git = "https://github.com/arik-so/rust-musig2", rev = "27797d7" }
